<?xml version="1.0" encoding="utf-8"?>

<com.doomonafireball.repmaxcalculator.widget.PadLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pad_numbers"
    style="@style/PadLayoutStyle.Numeric"
    android:background="@color/pad_numeric_background_color"
    android:columnCount="3"
    android:rowCount="4">

    <Button
        android:id="@+id/digit_7"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_7"/>

    <Button
        android:id="@+id/digit_8"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_8"/>

    <Button
        android:id="@+id/digit_9"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_9"/>

    <Button
        android:id="@+id/digit_4"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_4"/>

    <Button
        android:id="@+id/digit_5"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_5"/>

    <Button
        android:id="@+id/digit_6"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_6"/>

    <Button
        android:id="@+id/digit_1"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_1"/>

    <Button
        android:id="@+id/digit_2"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_2"/>

    <Button
        android:id="@+id/digit_3"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_3"/>

    <Button
        android:id="@+id/dec_point"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/dec_point"/>

    <Button
        android:id="@+id/digit_0"
        style="@style/PadButtonStyle.Numeric"
        android:onClick="onButtonClick"
        android:text="@string/digit_0"/>

    <Button
        android:id="@+id/del"
        style="@style/PadButtonStyle.Numeric.Delete"
        android:contentDescription="@string/desc_del"
        android:onClick="onButtonClick"
        android:text="@string/del"/>

</com.doomonafireball.repmaxcalculator.widget.PadLayout>
