<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutActivity">
    <item
        android:id="@+id/donate"
        android:visible="false"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/donate"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/donate_1"
                    android:title="@string/donate_1"/>
                <item
                    android:id="@+id/donate_2"
                    android:title="@string/donate_2"/>
                <item
                    android:id="@+id/donate_5"
                    android:title="@string/donate_5"/>
                <item
                    android:id="@+id/donate_10"
                    android:title="@string/donate_10"/>
                <item
                    android:id="@+id/rate_on_google_play"
                    android:title="@string/rate_on_google_play"/>
            </group>
        </menu>
    </item>
</menu>
