<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/action_bar_title_optional"/>

        <EditText
            android:id="@+id/action_bar_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:hint="@string/action_bar_title_hint"/>

        <Button
            android:id="@+id/fire_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fire_intent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:text="@string/results"/>

        <TextView
            android:id="@+id/returned_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/monospaced_text_background"
            android:fontFamily="monospace"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:text="@string/intent_creation_code"/>

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/monospaced_text_background"
            android:fontFamily="monospace"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:text="@string/start_activity_for_result_code"/>

        <TextView
            android:id="@+id/return_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/monospaced_text_background"
            android:fontFamily="monospace"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="11sp"/>
    </LinearLayout>
</ScrollView>